ReplicationFileBasedConfig: Replace FluentIterable with streams/lambda
Change-Id: I85356369f245a45aaef6db20655ac18750cb3400